// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CRUD error handling error response with "empty" \`data\` result create an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: CreateTodoInput!) { createTodo(input: $input) { id content description done priority createdAt updatedAt owner } }",
      "variables": {
        "input": {
          "content": "My new todo",
          "done": true,
        },
      },
    },
    {},
  ],
]
`;

exports[`CRUD error handling error response with "empty" \`data\` result delete an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: DeleteTodoInput!) { deleteTodo(input: $input) { id content description done priority createdAt updatedAt owner } }",
      "variables": {
        "input": {
          "id": "123123213",
        },
      },
    },
    {},
  ],
]
`;

exports[`CRUD error handling error response with "empty" \`data\` result get an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($id: ID!) { getTodo(id: $id) { id content description done priority createdAt updatedAt owner } }",
      "variables": {
        "id": "some-id",
      },
    },
    {},
  ],
]
`;

exports[`CRUD error handling error response with "empty" \`data\` result list items 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($filter: ModelTodoFilterInput,$limit: Int,$nextToken: String) { listTodos(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id content description done priority createdAt updatedAt owner } nextToken __typename } }",
      "variables": {},
    },
    {},
  ],
]
`;

exports[`CRUD error handling error response with "empty" \`data\` result update an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: UpdateTodoInput!) { updateTodo(input: $input) { id content description done priority createdAt updatedAt owner } }",
      "variables": {
        "input": {
          "description": "Updated description",
          "id": "some_id",
        },
      },
    },
    {},
  ],
]
`;

exports[`CRUD error handling error response with populated \`data\` result get an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($id: ID!) { getTodo(id: $id) { id content additionalInfo { id content createdAt updatedAt owner } } }",
      "variables": {
        "id": "some_id",
      },
    },
    {},
  ],
]
`;

exports[`CRUD error handling error response with populated \`data\` result list an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($filter: ModelTodoFilterInput,$limit: Int,$nextToken: String) { listTodos(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id content additionalInfo { id content createdAt updatedAt owner } } nextToken __typename } }",
      "variables": {},
    },
    {},
  ],
]
`;
